--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
